--- a/CCICertLoader/config.properties
+++ b/CCICertLoader/config.properties
@@ -1,18 +1,20 @@
 #
-#Thu Dec 04 15:41:33 FET 2014
+#Mon Dec 15 17:41:25 FET 2014
 M_STOP=\u0421\u0442\u043E\u043F
-files=50
+files=500
 url=212.98.164.233
-reppath=D\:\\Certifications\\data\\xml\\repo
+reppath=e\:\\Certifications\\repo
 psw=38zMnaMNAD1qO/PxuCFclQ\=\=
 ftpdirs={"minsk", "vitebsk", "grodno", "gomel", "brest", "mogilev"}
-xmlpath=D\:\\Certifications\\data\\xml\\source
+xmlpath=e\:\\Certifications\\source
 delay=30000
 ftpseparator=/
 M_EXIT=\u0412\u044B\u0445\u043E\u0434
-zippath=D\:\\oraclexe\\loaders\\data\\xml\\minsk.zip
 isdelete=true
-login=cci_ca
+zippath=D\:\\oraclexe\\loaders\\data\\xml\\minsk.zip
+logopath=c\:\\log\\
 M_PROPERTY=\u041F\u0440\u0430\u043C\u0435\u0442\u0440\u044B
+login=cci_ca
 M_START=\u0421\u0442\u0430\u0440\u0442
 iszip=true
+isftp=true
